[package]
name = "hb-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hb-view"

[dependencies]
libm = "0.2"
anyhow = "1"
once_cell = "1"
clap = { version = "3", features = ["derive", "unicode"] }

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "master"
features = ["png"]

[dependencies.harfbuzz-sys]
git = "https://github.com/songww/rust-harfbuzz"
branch = "hb-latest"
features = ["build-native-harfbuzz"]
