[package]
name = "hb-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hb-view"

[dependencies]
libm = "0.2"
anyhow = "1"
once_cell = "1"
clap = { version = "3", features = ["derive", "unicode"] }
viuer = "0.6.1"
image = "0.24.2"
unicode-segmentation = "1.9.0"

[dependencies.cairo-rs]
git = "https://github.com/songww/gtk-rs-core"
branch = "cairo-glyph-setters"
features = ["png"]

[dependencies.harfbuzz-sys]
git = "https://github.com/songww/rust-harfbuzz"
branch = "hb-latest"
features = ["build-native-harfbuzz"]
