[package]
name = "hb-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hb-view"

[dependencies]
libc = "0.2"
libm = "0.2"
image = "0.24"
viuer = "0.6"
anyhow = "1"
once_cell = "1"
fontconfig = { version = "0.5", path = "../fontconfig-rs/fontconfig" }
freetype-rs = "0.30"
clap = { version = "3", features = ["derive", "unicode"] }
unicode-segmentation = "1.9"

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "master"
features = ["png", "freetype"]

[dependencies.harfbuzz-sys]
git = "https://github.com/songww/rust-harfbuzz"
branch = "hb-latest"
default-features = false
features = ["build-native-harfbuzz"]
